# Python-Data-Project

./: .gitignore  README.md  pyproject.toml
Project/: 1_EDA_intro.ipynb  2_Skills_Count.ipynb  2_Skills_Demand.ipynb  3_Skills_Trend.ipynb  4_Salary_Analysis.ipynb  5_Optimal_Skills.ipynb
src/data_jobs/: data_access.py  data_process.py
