[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "data_jobs"
version = "0.1.0"
description = "Analysis of data-related job postings including skills demand, salaries, and job trends."
authors = [
    {name = "Harsh"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "datasets",
    "pyarrow",
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]